2012-10-15 13:40-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* main.m: Changes to automatically detect and build the correct
	project file.
